Extensions of dissect specifications, if the separator is set to null, the append return an array instead of a join.